# Iris

./: .gitignore  .gitmodules  CMakeLists.txt  Doxygen  README.md
Model/: BinarySerializer.cpp  BinarySerializer.h  Character.h  CharacterManager.h  CharacterTemplate.h  DataAccessLayer.h  FileReadCharacterTemplate.cpp  FileReadCharacterTemplate.h  GPBSerializer.cpp  GPBSerializer.h  IllegalOperationException.cpp  IllegalOperationException.h  Inventory.h  InventoryManageLayer.h  Item.h  JsonSerializer.cpp  JsonSerializer.h  PresetCharacterTemplate.cpp  PresetCharacterTemplate.h  RandomCharacterTemplate.cpp  RandomCharacterTemplate.h  Serializable.h  SimpleDevDB.cpp  SimpleDevDB.h  SimpleDevDBSpace.cpp  SimpleDevDBSpace.h  Space.h
cmake/: Findmysql++.cmake
design/: Iris.mdj  TClientDesign.md  design_logger.md
src/: CharacterManager.cpp  CharacterManager.h  InventoryManager.cpp  InventoryManager.h
src/Data/: DataPersistanceLayer.h  DataPersistenceLayer.h  DataPersistenceManager.cpp  DataPersistenceManager.h  KVDataPersistenceLayer.h  KVSpace.h  SimpleDevDB.cpp  SimpleDevDB.h  SimpleDevDBSpace.cpp  SimpleDevDBSpace.h  SimpleKVDevDB.cpp  SimpleKVDevDB.h  SimpleKVDevDBSpace.cpp  SimpleKVDevDBSpace.h  Space.h  SqlKVDatabase.cpp  SqlKVDatabase.h  SqlKVDatabaseSpace.cpp  SqlKVDatabaseSpace.h
src/Data/DBEngine/: IDBEngineProvider.h  MySqlProvider.cpp  MySqlProvider.h
src/Exceptions/: DPLException.cpp  DPLException.h  SqlException.cpp  SqlException.h
src/Logger/: ILogger.h  MasterLogger.cpp  MasterLogger.h  SimpleConsoleLogger.cpp  SimpleConsoleLogger.h
src/Main/: Context.cpp  Context.h  GameMain.cpp  GameMain.h  IDModule.h  Iris_State.h  Loopable.h  MoMLayer.h  MoManager.cpp  MoManager.h
src/TClient/: TClient.cpp  TClient.h  TClientMain.cpp
src/Utils/: Logger.cpp  Logger.h  SqlCmd.cpp  SqlCmd.h
test/: CMakeLists.txt  CharacterManagerTest.cpp  DataPersistanceTest.cpp  ItemTest.cpp  LoopSystemTest.cpp  MySqlConnectorBasicTest.cpp  SimpleKVDevDBTest.cpp  SqlKVDatabaseTest.cpp  UtilSqlCmdTest.cpp  main.cpp  test_config.h.in  test_main.cpp
